Move navbar to own file and fix spacing

--- a/SquatVis/WebContent/resources/css/header.css
+++ b/SquatVis/WebContent/resources/css/header.css
@@ -12,3 +12,7 @@
 	visibility: hidden;
 	position: absolute;
 }
+
+body { 
+    padding-top: 65px; 
+}
